--- a/KDIC/Base.lproj/Main_iPhone.storyboard
+++ b/KDIC/Base.lproj/Main_iPhone.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="NC3-k1-2z9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="NC3-k1-2z9">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
         <!--Detail View Controller - Title-->
@@ -501,19 +501,27 @@
     </scenes>
     <resources>
         <image name="antenna2.png" width="26" height="30"/>
+        <image name="antenna2.png" width="26" height="30"/>
         <image name="fast-forward.png" width="256" height="256"/>
+        <image name="iTunesArtwork.png" width="512" height="512"/>
         <image name="iTunesArtwork.png" width="512" height="512"/>
         <image name="icon-40.png" width="40" height="40"/>
         <image name="infoButton.png" width="30" height="30"/>
         <image name="microphone2.png" width="30" height="30"/>
+        <image name="microphone2.png" width="30" height="30"/>
+        <image name="nowPlaying.png" width="60" height="30"/>
+        <image name="nowPlaying.png" width="60" height="30"/>
+        <image name="nowPlaying.png" width="60" height="30"/>
         <image name="nowPlaying.png" width="60" height="30"/>
         <image name="play.png" width="256" height="256"/>
+        <image name="play.png" width="256" height="256"/>
         <image name="rewind.png" width="256" height="256"/>
+        <image name="schedule.png" width="30" height="30"/>
         <image name="schedule.png" width="30" height="30"/>
         <image name="volume_max.png" width="512" height="512"/>
         <image name="volume_min.png" width="512" height="512"/>
     </resources>
-    <color key="tintColor" red="0.63089923469999998" green="0.0090904594779999993" blue="0.13360678910000001" alpha="1" colorSpace="calibratedRGB"/>
+    <color key="tintColor" red="0.84705889225006104" green="0.015686275437474251" blue="0.019607843831181526" alpha="1" colorSpace="deviceRGB"/>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
