--- a/KDIC/Base.lproj/Main_iPhone.storyboard
+++ b/KDIC/Base.lproj/Main_iPhone.storyboard
@@ -16,15 +16,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="q7I-Xb-2rZ">
-                                <rect key="frame" x="0.0" y="64" width="320" height="436"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q7I-Xb-2rZ">
+                                <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GSj-JJ-fSX">
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GSj-JJ-fSX">
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
@@ -39,6 +39,15 @@
                             </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="q7I-Xb-2rZ" secondAttribute="bottom" id="2YV-9O-hbB"/>
+                            <constraint firstItem="GSj-JJ-fSX" firstAttribute="leading" secondItem="l2N-EX-B8b" secondAttribute="leading" id="LY9-5e-fmU"/>
+                            <constraint firstItem="GSj-JJ-fSX" firstAttribute="leading" secondItem="q7I-Xb-2rZ" secondAttribute="leading" id="Ngh-63-dnQ"/>
+                            <constraint firstAttribute="trailing" secondItem="GSj-JJ-fSX" secondAttribute="trailing" id="Vfo-MV-abk"/>
+                            <constraint firstItem="q7I-Xb-2rZ" firstAttribute="top" secondItem="GSj-JJ-fSX" secondAttribute="bottom" id="vnB-au-liT"/>
+                            <constraint firstItem="q7I-Xb-2rZ" firstAttribute="trailing" secondItem="GSj-JJ-fSX" secondAttribute="trailing" id="wj6-A0-xLE"/>
+                            <constraint firstItem="GSj-JJ-fSX" firstAttribute="top" secondItem="xwa-nh-Q0B" secondAttribute="bottom" id="yrc-wM-Rv5"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="rCE-Ax-I9X"/>
                     <connections>
@@ -189,6 +198,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="hMm-ls-5eY">
                         <barButtonItem key="rightBarButtonItem" image="infoButton.png" id="fVd-jb-uBN">
+                            <inset key="imageInsets" minX="4" minY="3" maxX="3" maxY="3"/>
                             <connections>
                                 <segue destination="z33-8w-N9D" kind="modal" identifier="ViewDetails" modalTransitionStyle="coverVertical" id="jXs-W6-ECl"/>
                             </connections>
@@ -281,12 +291,12 @@
             <objects>
                 <tableViewController id="sQo-07-THK" customClass="ShowsPodcastsViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="WPC-3Z-120">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PodcastCell" textLabel="QSq-BS-8Ju" imageView="Xkd-dM-TvG" style="IBUITableViewCellStyleDefault" id="H3r-p4-hg2">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="H3r-p4-hg2" id="07R-Cm-vzN">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -528,7 +538,7 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="oVu-L5-DhR"/>
-        <segue reference="ZOV-Qw-rxu"/>
+        <segue reference="ET6-T0-3Rc"/>
+        <segue reference="NOq-nw-ovA"/>
     </inferredMetricsTieBreakers>
 </document>
