--- a/KDIC/Base.lproj/Main_iPhone.storyboard
+++ b/KDIC/Base.lproj/Main_iPhone.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="NC3-k1-2z9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="NC3-k1-2z9">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <scenes>
-        <!--Detail View Controller - Title-->
+        <!--Title-->
         <scene sceneID="hXM-s1-mQ0">
             <objects>
                 <viewController id="z33-8w-N9D" customClass="DetailViewController" sceneMemberID="viewController">
@@ -18,7 +18,6 @@
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q7I-Xb-2rZ">
                                 <rect key="frame" x="0.0" y="64" width="320" height="416"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -26,7 +25,6 @@
                             </textView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GSj-JJ-fSX">
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Details" id="Zm4-bh-fux">
                                         <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="pDR-Kw-9mg">
@@ -58,7 +56,7 @@
             </objects>
             <point key="canvasLocation" x="1548" y="-32"/>
         </scene>
-        <!--Player View Controller - KDIC Radio-->
+        <!--KDIC Radio-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController storyboardIdentifier="StreamView" title="KDIC Radio" id="vXZ-lx-hvc" customClass="PlayerViewController" sceneMemberID="viewController">
@@ -72,7 +70,6 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RHB-13-4TN">
                                 <rect key="frame" x="135" y="310" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Button" image="play.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -83,7 +80,6 @@
                             </button>
                             <button hidden="YES" opaque="NO" tag="3000" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pSP-H2-kKg">
                                 <rect key="frame" x="233" y="315" width="40" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Button" image="fast-forward.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -98,7 +94,6 @@
                             </button>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gbV-gp-BDA">
                                 <rect key="frame" x="47" y="315" width="40" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="ogK-F9-Pvx"/>
                                 </constraints>
@@ -116,11 +111,9 @@
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iTunesArtwork.png" translatesAutoresizingMaskIntoConstraints="NO" id="gby-y7-pvw">
                                 <rect key="frame" x="10" y="10" width="300" height="220"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="V5q-vm-xr2">
                                 <rect key="frame" x="10" y="245" width="300" height="21"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="7EM-ze-3EB"/>
                                 </constraints>
@@ -130,7 +123,6 @@
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please wait for the stream to load!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="zAU-pw-1E2">
                                 <rect key="frame" x="10" y="280" width="300" height="21"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="HMj-c3-L9x"/>
                                 </constraints>
@@ -139,7 +131,6 @@
                             </label>
                             <imageView userInteractionEnabled="NO" alpha="0.69999999999999973" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="volume_min.png" translatesAutoresizingMaskIntoConstraints="NO" id="SIm-ek-lkT">
                                 <rect key="frame" x="30" y="363" width="25" height="25"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="25" id="NW3-U1-1tB"/>
                                     <constraint firstAttribute="height" constant="25" id="U0Y-6n-2bj"/>
@@ -147,7 +138,6 @@
                             </imageView>
                             <imageView userInteractionEnabled="NO" alpha="0.69999999999999973" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="volume_max.png" translatesAutoresizingMaskIntoConstraints="NO" id="yiP-zU-kJJ">
                                 <rect key="frame" x="265" y="363" width="25" height="25"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="L83-MW-gMi"/>
                                     <constraint firstAttribute="width" constant="25" id="NAN-J5-2fW"/>
@@ -155,7 +145,6 @@
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RH3-U9-Edf">
                                 <rect key="frame" x="55" y="363" width="210" height="33"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
@@ -221,13 +210,12 @@
             </objects>
             <point key="canvasLocation" x="1114" y="-32"/>
         </scene>
-        <!--Navigation Controller - Podcasts-->
+        <!--Podcasts-->
         <scene sceneID="WNZ-y6-37V">
             <objects>
                 <navigationController definesPresentationContext="YES" id="hRj-hL-NLd" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Podcasts" image="microphone2.png" id="qWS-zI-B7u"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="xhk-dI-Bim">
-                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -238,7 +226,7 @@
             </objects>
             <point key="canvasLocation" x="-300" y="-32"/>
         </scene>
-        <!--Podcast View Controller - Podcasts-->
+        <!--Podcasts-->
         <scene sceneID="ciq-e5-AZR">
             <objects>
                 <tableViewController storyboardIdentifier="PodcastViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="0ee-hC-ZBb" customClass="PodcastViewController" sceneMemberID="viewController">
@@ -337,7 +325,7 @@
             </objects>
             <point key="canvasLocation" x="532" y="-32"/>
         </scene>
-        <!--Tab Bar Controller - Schedule-->
+        <!--Schedule-->
         <scene sceneID="2XJ-Vw-QOG">
             <objects>
                 <tabBarController title="Schedule" definesPresentationContext="YES" id="NC3-k1-2z9" sceneMemberID="viewController">
@@ -357,13 +345,12 @@
             </objects>
             <point key="canvasLocation" x="-923" y="-32"/>
         </scene>
-        <!--Navigation Controller - Live Stream-->
+        <!--Live Stream-->
         <scene sceneID="RhP-8T-4qW">
             <objects>
                 <navigationController definesPresentationContext="YES" id="z6B-dz-HSN" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Live Stream" image="antenna2.png" id="vMr-tg-iH7"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="Ylh-Rt-CpF">
-                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -374,7 +361,7 @@
             </objects>
             <point key="canvasLocation" x="-300" y="609"/>
         </scene>
-        <!--Live Stream View Controller - Live Stream-->
+        <!--Live Stream-->
         <scene sceneID="x2v-zH-Wht">
             <objects>
                 <viewController id="hSR-9M-f9e" customClass="LiveStreamViewController" sceneMemberID="viewController">
@@ -388,7 +375,6 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ATg-N1-bno">
                                 <rect key="frame" x="135" y="309" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="BXl-K1-YRb"/>
                                     <constraint firstAttribute="height" constant="50" id="vov-9p-R7l"/>
@@ -403,11 +389,9 @@
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iTunesArtwork.png" translatesAutoresizingMaskIntoConstraints="NO" id="G0V-rf-QJ4">
                                 <rect key="frame" x="10" y="10" width="300" height="220"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="O8f-aj-onY">
                                 <rect key="frame" x="10" y="245" width="300" height="21"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="43k-al-2lf"/>
                                 </constraints>
@@ -417,7 +401,6 @@
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please wait for the stream to load!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="USe-sy-jHZ">
                                 <rect key="frame" x="10" y="280" width="300" height="21"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="Ubw-Gf-7bC"/>
                                 </constraints>
@@ -461,7 +444,7 @@
             </objects>
             <point key="canvasLocation" x="91" y="609"/>
         </scene>
-        <!--Navigation Controller - Schedule-->
+        <!--Schedule-->
         <scene sceneID="la2-Zk-rcG">
             <objects>
                 <navigationController definesPresentationContext="YES" id="ytS-Hz-XWU" sceneMemberID="viewController">
@@ -477,7 +460,7 @@
             </objects>
             <point key="canvasLocation" x="-308" y="-652"/>
         </scene>
-        <!--Schedule View Controller - Schedule-->
+        <!--Schedule-->
         <scene sceneID="39k-qL-tdg">
             <objects>
                 <tableViewController storyboardIdentifier="Schedule" id="end-Ob-wk3" customClass="ScheduleViewController" sceneMemberID="viewController">
@@ -523,14 +506,14 @@
         <image name="volume_max.png" width="512" height="512"/>
         <image name="volume_min.png" width="512" height="512"/>
     </resources>
-    <color key="tintColor" red="0.84705889225006104" green="0.015686275437474251" blue="0.019607843831181526" alpha="1" colorSpace="deviceRGB"/>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="ET6-T0-3Rc"/>
+        <segue reference="oVu-L5-DhR"/>
         <segue reference="NOq-nw-ovA"/>
     </inferredMetricsTieBreakers>
+    <color key="tintColor" red="0.84705889225006104" green="0.015686275437474251" blue="0.019607843831181526" alpha="1" colorSpace="deviceRGB"/>
 </document>
